--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 .App {
   text-align: center;
   padding: 2% 5%;
+  color: white;
+  background: #344263;
 }
 
 .App * {
@@ -29,11 +31,12 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
+  border: 3px solid #ff8c00;
   font-size: 14px;
   line-height: 20px;
   align-self: center;
   height: 38px;
+  margin-bottom: 1rem;
 }
 
 .city {
@@ -63,7 +66,7 @@ input[type="number"] {
 .suggestions > li {
   text-align: left;
   padding: 8px 6px 8px 10px;
-  background-color: #eee;
+  background-color: #40495e;
   cursor: default;
 }
 
@@ -73,16 +76,20 @@ input[type="number"] {
 }
 
 .suggestions > li:hover {
-  background-color: #bcdcdb;
+  background-color: #4682b4;
 }
 
 .event {
   padding: 10px 10px 35px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
+  border: 3px solid #ff8c00;
   border-radius: 4px;
   position: relative;
+}
+
+.event:hover {
+  background-color: #4682b4;
 }
 
 .details-btn {
@@ -93,6 +100,7 @@ input[type="number"] {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+  background-color: #ff8c00;
 }
 
 .name {
@@ -127,11 +135,11 @@ input[type="number"] {
   padding: 20px;
   font-family: sans-serif;
 }
-
+/*
 .Alert {
   position: fixed;
   top: 20px;
-}
+}*/
 
 .data-vis-wrapper {
   display: flex;
