--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -1,10 +1,28 @@
 .WelcomeScreen {
+  justify-content: center;
+  align-items: center;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
-  background: white;
+  color: white;
+  background: #344263;
 }
+
+.welcome-container {
+  margin: 150px auto;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading-welcome {
+  margin: 1rem;
+}
+
 .login-button {
   color: #494949;
   text-transform: uppercase;
@@ -16,16 +34,21 @@
   min-width: 10rem;
   margin: 1rem;
 }
+
+.button_cont {
+  margin-top: 3rem;
+}
+
 .google-btn {
   width: 184px;
   height: 42px;
-  margin: 1rem;
   background-color: #4285f4;
   border-radius: 2px;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
 }
 .google-btn:hover {
   box-shadow: 0 0 6px #4285f4;
+  cursor: pointer;
 }
 
 .google-btn:active {
